--- a/todo
+++ b/todo
@@ -2,6 +2,7 @@ Not working as expected:
 
 [ ] (should split last pipe and execute ls) ""|"""ls""-la""|"|"ls"
 [ ] (should execute cd and create file) cd $HOME > file
+[ ] cat << a > file1 | cat << b > file2 (cat << a > file1 not redirecting input -- check pipe)
 
 Merge with Carlos and check again:
 [ ] (export should diplay d="" e="" f="", env is ok) export d= e= f=
