chore: marked cd task as complete

--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
 Not working as expected:
 
 [ ] (should split last pipe and execute ls) ""|"""ls""-la""|"|"ls"
-[ ] (should execute cd and create file) cd $HOME > file
+[x] (should execute cd and create file) cd $HOME > file
 [ ] cat << a > file1 | cat << b > file2 (cat << a > file1 not redirecting input -- check pipe)
 
 Merge with Carlos and check again:
