chore: added tasks to todo

--- a/todo
+++ b/todo
@@ -1,6 +1,8 @@
 Not working as expected:
-[ ] cat > file | echo "something"
-[ ] cat < file | echo "something"
+[ ] (problem with blocking external commmands) cat > file | echo "something"
+[ ] cat << a < todo > file1
+
+Fixed:
 [x] (should split last pipe and execute ls) ""|"""ls""-la""|"|"ls"
 [x] (should execute cd and create file) cd $HOME > file
 [x] cat << a > file1 | cat << b > file2 (cat << a > file1 not redirecting input -- check pipe)
